# iron-defer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROPOSAL.md  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml
.sqlx/: query-023bc3b06344a631a12b2d3e539416bea765597259063b7fb94d2785608d82d3.json  query-1aeaccb4868df5c7c9fd1b8df85cf89985c4343fd837365618f28a9c5a15ffd6.json  query-1e01144954af8bd2c70d710c88ecff6d245dc7f74a2a65253618cebc6bd7ee13.json  query-237ffd3f0876938be61bac5e66ea05bfa857e4efd957f2c696727e1bc807bbc1.json  query-5af70736970907e39874d310c8351a6ef30cb5212a50e13ecda6743839d23e7d.json  query-72674b2176a22c34df3830ec13d2a865126f4fe8a04e7cdce108d98ffa23706a.json  query-74bfd97c1961771ddbb6558f7bda095f34e6e006eccb028ae3a60f907fe9aedf.json  query-80d444add0cfc46e5790e304bcbd792401e43d8e5062138948870ada848a9610.json  query-8600a2d19f6a72b053bc1b866328b258b797722eb9ed6e50890ada9355854d00.json  query-8c693de3feb972bc8ad0e0eb7c59e4e0a174dd25fe6a92955849063ba8222c4d.json  query-93e54800883bb1ffed9bb272b2e0558b73306702ff925a0d7ea623497fa039b5.json  query-b469af1b4621dc4e6237a9da9b9546b9c2f2cefba291c7a7c830f05a16ca63a7.json  query-d8af8a9958f73cd08a3e74b9839b9a3a11f05194e5dfc329fede8579f2c530c4.json  query-dbaabeb72f58408f021a9efc5a26ea3039ee8f735159ecb18847e102bfccf8c6.json  query-dda78a0fd2d9b9ab088cf613030394625db5f769e13a5c8fb489267787445652.json  query-de2125f86537db2b3b84e0a216050a6ac9afe1f41f5d550a66859447f127e960.json  query-ebc2350bd6f8bd68a9e008977df9755ccb41cfe60edffa8bba6a6fe0e7c08099.json  query-f042128093ac8951cd4d5100d8b86b0d21cc480e097c2f3bfd435aa193d4a295.json  query-fe790ff47560cac1eb59ee723a6077c04ed230e44eba9b214df99aa2a68f8e8f.json
crates/api/: Cargo.toml
crates/api/benches/: audit_overhead.rs  checkpoint_latency.rs  region_throughput.rs  submission_safety.rs  throughput.rs  unlogged_throughput.rs
crates/api/examples/: axum_integration.rs  basic_enqueue.rs  multi_queue.rs  retry_and_backoff.rs
crates/api/src/: config.rs  lib.rs  main.rs  shutdown.rs
crates/api/src/cli/: config.rs  db.rs  mod.rs  output.rs  submit.rs  tasks.rs  workers.rs
crates/api/src/http/: errors.rs  extractors.rs  mod.rs  router.rs
crates/api/src/http/handlers/: health.rs  metrics.rs  mod.rs  queues.rs  tasks.rs
crates/api/tests/: audit_log_test.rs  audit_trail_test.rs  chaos_common.rs  chaos_db_outage_test.rs  chaos_max_retries_test.rs  chaos_sigterm_test.rs  chaos_worker_crash_test.rs  checkpoint_test.rs  cli_test.rs  config_validation_test.rs  e2e_checkpoint_test.rs  e2e_cli_consistency_test.rs  e2e_compliance_audit_test.rs  e2e_compliance_traces_test.rs  e2e_data_integrity_test.rs  e2e_lifecycle_test.rs  e2e_metrics_test.rs  e2e_queue_stats_test.rs  e2e_readiness_outage_test.rs  e2e_region_test.rs  e2e_rest_workflow_test.rs  e2e_suspend_test.rs  idempotency_test.rs  integration_test.rs  lifecycle_log_test.rs  metrics_test.rs  observability_test.rs  otel_counters_test.rs  otel_lifecycle_test.rs  otel_metrics_test.rs  otel_traces_test.rs  pool_exhaustion_test.rs  rest_api_test.rs  shutdown_test.rs  submission_safety_e2e_test.rs  suspend_test.rs  sweeper_counter_test.rs  sweeper_test.rs  transactional_enqueue_test.rs  unlogged_test.rs  (+1 more)
crates/api/tests/common/: e2e.rs  mod.rs  otel.rs
crates/application/: Cargo.toml
crates/application/src/: config.rs  lib.rs  metrics.rs  observability.rs  registry.rs
crates/application/src/ports/: mod.rs  task_executor.rs  task_repository.rs
crates/application/src/services/: mod.rs  scheduler.rs  sweeper.rs  worker.rs
crates/domain/: Cargo.toml
crates/domain/src/: error.rs  lib.rs
crates/domain/src/model/: attempts.rs  audit.rs  kind.rs  mod.rs  priority.rs  queue.rs  task.rs  worker.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: db.rs  error.rs  lib.rs
crates/infrastructure/src/adapters/: mod.rs  postgres_task_repository.rs
crates/infrastructure/src/observability/: metrics.rs  mod.rs  tracing.rs
crates/infrastructure/tests/: init_tracing_test.rs  task_repository_test.rs  tracing_privacy_test.rs
crates/infrastructure/tests/common/: mod.rs
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml  smoke-test.sh
docs/: diataxis-map.md  index.md
docs/adr/: 0001-hexagonal-architecture.md  0002-error-handling.md  0003-configuration-management.md  0004-async-runtime-tokio-ecosystem.md  0005-database-layer-sqlx.md  0006-serialization-serde.md
docs/artifacts/implementation/: 10-1-otel-distributed-traces.md  10-2-append-only-audit-log.md  10-3-compliance-e2e-tests.md  11-1-checkpoint-resume-schema-and-api.md  11-2-unlogged-table-mode.md  (+56 more)
docs/explanation/: claiming-and-leases.md  consistency-and-delivery-semantics.md  embedded-vs-standalone.md  observability-model.md  unlogged-vs-audit-log.md
docs/guidelines/: compliance-evidence.md  postgres-reconnection.md  quality-gates.md  rust-idioms.md  security.md  structured-logging.md
docs/guides/: benchmarks.md  configuration.md  deployment.md  embedded-library.md  how-to-create-idempotent-producers.md  how-to-debug-stuck-tasks.md  how-to-enable-audit-trail.md  how-to-harden-production.md  how-to-rotate-config-by-profile.md  how-to-run-chaos-tests.md  how-to-tune-worker-concurrency.md  how-to-use-regions.md  observability.md  rest-api.md  standalone-binary.md
docs/reference/: cli-reference.md  config-reference.md  error-codes.md  log-events.md  metrics-catalog.md  sql-queries-ops.md
docs/tutorials/: embed-in-axum.md  first-task-local.md  operate-standalone.md  retries-and-failures.md  suspended-workflow.md
k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml
migrations/: 0001_create_tasks_table.sql  0002_add_claim_check.sql  0003_add_pagination_index.sql  0004_add_idempotency_columns.sql  0005_add_trace_id_column.sql  0006_add_trace_id_index.sql  0007_create_audit_log_table.sql  0008_remove_redundant_trigger.sql  0009_add_checkpoint_column.sql  0010_harden_audit_log_schema.sql  0011_add_suspend_columns.sql  0012_add_region_column.sql
(+15 files in other folders)
