[package]
name = "iron-defer-application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "iron_defer_application"
path = "src/lib.rs"

[dependencies]
bon = { workspace = true }
iron-defer-domain = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt", "macros"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true }
humantime-serde = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
tracing-test = { workspace = true }
